--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -8,6 +8,43 @@ date: "2024-08-15"
 link: "https://lilianzlettuce.github.io/ad417/"
 ---
 
+<SplitSection className="text-xs font-mono">
+  Concept → Context → Media
+</SplitSection>
+
+<SplitSection className="text-xs">
+  <SectionColumn size={3}>
+    **Becoming**
+  </SectionColumn>
+  <SectionColumn size={12}>
+    <MDXImage 
+      src="/projects/becoming/projection-1.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5"
+    />
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
+<ProjectHeader
+  title="Becoming"
+  description="Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+      { label: "Role", values: ["Artist", "Developer"] },
+      { label: "Timeline", values: ["August 2024 - May 2025"] },
+      { label: "Team", values: ["Solo project"] },
+    ]}
+  />
+</ProjectHeader>
+
 <ProjectHeader
   title="Atrophy: Graveyard of My Fallen Heroes"
   description="An immersive WebVR experience exploring decay, memory, and transformation in interactive 3D."
