--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -29,22 +29,27 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
-      **Becoming** | 2025
+      **Becoming** 
       
+      2025
+      
+      <Section className="w-4/5">
+        Accepted into the 2025 International Conference on New Interfaces for Musical Expression (NIME)
+      </Section>
     </SectionColumn>
     <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
-      <ProjectInfo
+      <ProjectInfoRow
         items={[
           { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
           { label: "Role", values: ["Artist", "Developer"] },
           { label: "Timeline", values: ["6 months"] },
           { label: "Team", values: ["Solo project"] },
         ]}
+        labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
+        valuesClassName="text-sm"
       />
 
       Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
-
-      Accepted into the 2025 International Conference on New Interfaces for Musical Expression (NIME)
     </SectionColumn>
   </SplitSection>
 
@@ -78,6 +83,8 @@ link: "https://youtu.be/WGYg-UNLEUU"
           { label: "Timeline", values: ["6 months"] },
           { label: "Team", values: ["Solo project"] },
         ]}
+        labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs mb-1"
+        valuesClassName="text-sm"
       />
 
       Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
