--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -9,66 +9,19 @@ award: "Performance @ The International Conference on New Interfaces for Musical
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXImage 
+    src="/projects/becoming/projection-1.webp" 
+    alt="Hero" 
+    preset="header"
+    width={3754}
+    height={2835}
+    frame="none"
+    className="w-3/5"
+  />
+</Section>
+
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
-  <SplitSection className="my-2 mb-8 gap-2">
-    <SectionColumn size={6}>
-      ###### [01/01]
-    </SectionColumn>
-    <SectionColumn size={6}>
-      <MDXImage 
-        src="/projects/becoming/projection-1.webp" 
-        alt="Hero" 
-        preset="header"
-        width={3754}
-        height={2835}
-        frame="none"
-        className="w-full"
-      />
-    </SectionColumn>
-  </SplitSection>
-
-  <SplitSection className="my-2 mb-8 gap-2">
-    <SectionColumn size={6}>
-      **Becoming** 
-      
-      2025
-      
-      <Section className="w-4/5">
-        Accepted into the 2025 International Conference on New Interfaces for Musical Expression (NIME)
-      </Section>
-    </SectionColumn>
-    <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
-      <ProjectInfoRow
-        items={[
-          { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
-          { label: "Role", values: ["Artist", "Developer"] },
-          { label: "Timeline", values: ["6 months"] },
-          { label: "Team", values: ["Solo project"] },
-        ]}
-        labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
-        valuesClassName="text-sm"
-      />
-
-      Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
-    </SectionColumn>
-  </SplitSection>
-
-  <SplitSection className="text-xs font-mono">
-    Concept → Context → Media
-  </SplitSection>
-
-  <Section className="w-[100vw] h-[100vh] flex justify-center items-center">
-    <MDXImage 
-      src="/projects/becoming/projection-1.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-2/5"
-    />
-  </Section>
-
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
       #### Becoming
@@ -277,3 +230,52 @@ link: "https://youtu.be/WGYg-UNLEUU"
       { label: "Type", values: ["Audiovisual Installation"] },
     ]}
   />
+
+<Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      ###### [01/01]
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/projection-1.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      **Becoming** 
+      
+      2025
+      
+      <Section className="w-4/5">
+        Accepted into the 2025 International Conference on New Interfaces for Musical Expression (NIME)
+      </Section>
+    </SectionColumn>
+    <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
+      <ProjectInfoRow
+        items={[
+          { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+          { label: "Role", values: ["Artist", "Developer"] },
+          { label: "Timeline", values: ["6 months"] },
+          { label: "Team", values: ["Solo project"] },
+        ]}
+        labelClassName="font-normal text-muted-foreground uppercase text-xs"
+        valuesClassName="text-sm"
+      />
+
+      Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
+    </SectionColumn>
+  </SplitSection>
+
+  <SplitSection className="text-xs font-mono">
+    Concept → Context → Media
+  </SplitSection>
+</Section>
