added video mockup functionality

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -10,7 +10,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
 <Section className="w-full h-[90vh] flex justify-center items-center">
-  <MDXImage 
+  <MDXMedia 
     src="/projects/becoming/projection-1.webp" 
     alt="Hero" 
     preset="header"
@@ -58,7 +58,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
     Graphics projection | 2024
   </Section>
 
-  <MDXImage 
+  <MDXMedia 
     src="/projects/becoming/projection-2.webp" 
     alt="Hero" 
     preset="header"
@@ -70,7 +70,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/projection-3.webp" 
         alt="Hero" 
         preset="header"
@@ -81,7 +81,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
       />
     </SectionColumn>
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/screen-1.webp" 
         alt="Hero" 
         preset="header"
@@ -99,7 +99,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-interact.webp" 
         alt="Hero" 
         preset="header"
@@ -113,7 +113,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-front-2.webp" 
         alt="Hero" 
         preset="header"
@@ -124,7 +124,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
       />
     </SectionColumn>
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-iso-1.webp" 
         alt="Hero" 
         preset="header"
@@ -137,7 +137,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
   </SplitSection>
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={12}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-front-1.webp" 
         alt="Hero" 
         preset="header"
@@ -150,7 +150,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
   </SplitSection>
   <SplitSection className="my-2 gap-2">
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-lighting-1.webp" 
         alt="Hero" 
         preset="header"
@@ -161,7 +161,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
       />
     </SectionColumn>
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/box-lighting-2.webp" 
         alt="Hero" 
         preset="header"
@@ -237,7 +237,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
       ###### [01/01]
     </SectionColumn>
     <SectionColumn size={6}>
-      <MDXImage 
+      <MDXMedia 
         src="/projects/becoming/projection-1.webp" 
         alt="Hero" 
         preset="header"
