--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -8,15 +8,43 @@ date: "2024-11-15"
 link: "https://www.scoutforschools.com/"
 ---
 
-<MDXImage 
-  src="/projects/scout/hero_mac-air.webp" 
-  alt="Hero" 
-  preset="header"
-  width={2560}
-  height={1664}
-  frame="mockup"
-  className="w-4/5 my-10"
-/>
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
+    isVideo
+    src="/projects/scout/hero_mac-air.mov" 
+    alt="Hero video" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="mockup"
+    className="w-4/5 my-10"
+  />
+</Section>
+
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
+    isVideo
+    src="/projects/scout/hero_mac-air.mov" 
+    alt="Hero video" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="none"
+    className="shadow-lg w-full"
+  />
+</Section>
+
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
+    src="/projects/scout/hero_mac-air.webp" 
+    alt="Hero" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="mockup"
+    className="w-4/5 my-10"
+  />
+</Section>
 
 <ProjectHeader
   title="Scout"
@@ -34,7 +62,7 @@ link: "https://www.scoutforschools.com/"
 
 <SplitSection>
   <SectionColumn size={5}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/deco_iphone.webp" 
       alt="Hero" 
       preset="project-documentation"
@@ -45,7 +73,7 @@ link: "https://www.scoutforschools.com/"
     />
   </SectionColumn>
   <SectionColumn size={5}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/deco_mac-air.webp" 
       alt="Hero" 
       preset="project-documentation"
@@ -116,7 +144,7 @@ link: "https://www.scoutforschools.com/"
 
     <SplitSection className="mt-0 gap-2">
       <SectionColumn size={5}>
-        <MDXImage 
+        <MDXMedia 
           src="/projects/scout/deco_iphone.webp" 
           alt="Hero" 
           preset="project-documentation"
@@ -127,7 +155,7 @@ link: "https://www.scoutforschools.com/"
         />
       </SectionColumn>
       <SectionColumn size={5}>
-        <MDXImage 
+        <MDXMedia 
           src="/projects/scout/deco_mac-air.webp" 
           alt="Hero" 
           preset="project-documentation"
@@ -149,7 +177,7 @@ link: "https://www.scoutforschools.com/"
 
     <br/>
     
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/blog-post_mac-air.webp" 
       alt="Hero" 
       preset="header"
@@ -173,7 +201,7 @@ link: "https://www.scoutforschools.com/"
     
     The implementation leverages Next.js's built-in optimizations for fast loading times and excellent SEO performance. Server-side rendering ensures content is immediately available to users and search engines, while static generation provides optimal performance for the marketing content.
 
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/blog-listings_mac-air.webp" 
       alt="Hero" 
       preset="header"
@@ -197,7 +225,7 @@ link: "https://www.scoutforschools.com/"
   <SectionColumn size={0}>
   </SectionColumn>
   <SectionColumn size={5}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/hero_iphone.webp" 
       alt="Hero" 
       preset="project-documentation"
@@ -208,7 +236,7 @@ link: "https://www.scoutforschools.com/"
     />
   </SectionColumn>
   <SectionColumn size={5}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/home-cards_iphone.webp" 
       alt="Hero" 
       preset="project-documentation"
@@ -219,7 +247,7 @@ link: "https://www.scoutforschools.com/"
     />
   </SectionColumn>
   <SectionColumn size={5}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/scout/cta_iphone.webp" 
       alt="Hero" 
       preset="project-documentation"
