--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -17,7 +17,7 @@ link: "https://lilianzlettuce.github.io/ad417/"
     **Becoming**
   </SectionColumn>
   <SectionColumn size={12}>
-    <MDXImage 
+    <MDXMedia 
       src="/projects/becoming/projection-1.webp" 
       alt="Hero" 
       preset="header"
