compressed the video

--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -11,7 +11,7 @@ link: "https://www.scoutforschools.com/"
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
     isVideo
-    src="/projects/scout/hero_mac-air.mov" 
+    src="/projects/scout/hero_mac-air.mp4" 
     alt="Hero video" 
     preset="header"
     width={2560}
@@ -24,7 +24,7 @@ link: "https://www.scoutforschools.com/"
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
     isVideo
-    src="/projects/scout/hero_mac-air.mov" 
+    src="/projects/scout/hero_mac-air.mp4" 
     alt="Hero video" 
     preset="header"
     width={2560}
