added video header for becoming, more layout stuff

--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -8,6 +8,44 @@ date: "2024-08-15"
 link: "https://lilianzlettuce.github.io/ad417/"
 ---
 
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
+    src="/projects/atrophy/1.png" 
+    alt="Hero" 
+    preset="header"
+    width={3754}
+    height={2835}
+    frame="none"
+    className="w-4/5"
+  />
+</Section>
+
+<Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      #### Atrophy: Graveyard of My Fallen Heroes
+      2024
+      
+    </SectionColumn>
+    <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
+      <ProjectInfoRow
+        items={[
+          { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+          { label: "Role", values: ["Artist", "Developer"] },
+          { label: "Timeline", values: ["6 months"] },
+          { label: "Team", values: ["Solo project"] },
+        ]}
+        labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
+        valuesClassName="text-sm"
+      />
+
+      Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
+    </SectionColumn>
+  </SplitSection>
+</Section>
+
+<br/><br/><br/><br/>
+
 <SplitSection className="text-xs font-mono">
   Concept → Context → Media
 </SplitSection>
