--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -11,6 +11,20 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
 <Section className="w-full h-[90vh] flex justify-center items-center">
   <MDXMedia 
+    isVideo
+    loop
+    src="/projects/becoming/circular-graphics.mp4" 
+    alt="Hero video" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="none"
+    className="shadow-lg w-4/5"
+  />
+</Section>
+
+<Section className="hidden w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
     src="/projects/becoming/projection-1.webp" 
     alt="Hero" 
     preset="header"
