--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -8,13 +8,14 @@ date: "2022-12-01"
 link: "https://www.purduehackers.com/"
 ---
 
-<MDXImage
+<MDXMedia 
   src="/projects/purdue-hackers/hero_mac-air.webp" 
   alt="Hero screenshot" 
   preset="header"
   width={2560}
   height={1664}
   frame="mockup"
+  className="w-4/5"
 />
 
 <ProjectHeader
@@ -67,7 +68,7 @@ link: "https://www.purduehackers.com/"
     <br/><br/><br/>
 
     #### Visuals
-    <MDXImage
+    <MDXMedia
       src="/projects/purdue-hackers/hero_mac-air.webp" 
       alt="Hero screenshot" 
       preset="project-documentation"
@@ -77,7 +78,7 @@ link: "https://www.purduehackers.com/"
       className="w-4/5"
     />
 
-    <MDXImage 
+    <MDXMedia 
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
@@ -87,7 +88,7 @@ link: "https://www.purduehackers.com/"
       className="w-4/5 my-10"
     />
 
-    <MDXImage
+    <MDXMedia
       src="/projects/purdue-hackers/hack-night_mac-air.webp" 
       alt="Hack night" 
       preset="project-documentation"
@@ -113,7 +114,7 @@ link: "https://www.purduehackers.com/"
     - Lofi/Hifi prototypes with Figma
     - Technical implementation and iterations
 
-    <MDXImage
+    <MDXMedia
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
