stripped down doc page

--- a/content/projects/becoming-dev.mdx
+++ b/content/projects/becoming-dev.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Becoming"
+title: "Becoming - temp"
 description: "Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
 image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
-categories: ["dev", "art"]
+categories: ["dev"]
 date: "2025-05-01"
 award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
 link: "https://youtu.be/WGYg-UNLEUU"
@@ -37,40 +37,39 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
   <SplitSection className="my-2 mb-8 gap-2">
-    <SectionColumn size={3}>
+    <SectionColumn size={6}>
       #### Becoming
       2025
-      <a href="https://nime2025.org/proceedings/183.html" target="_blank" rel="noopener noreferrer">
-        [View Demo >>]
-      </a>
       
     </SectionColumn>
-    <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
+    <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Arduino", "Processing", "Repurposed Hardware", "Sensors"] },
-          { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["Audiovisual Installation"] },
+          { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+          { label: "Role", values: ["Artist", "Developer"] },
+          { label: "Timeline", values: ["6 months"] },
+          { label: "Team", values: ["Solo project"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
       />
 
-      <br/>
-
       Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
       
+      <u>[View Demo >>]</u>
+      [View Paper >>]
 
-      <div>
-        Exhibitions/Performances:
-        <a className="text-xs" href="https://nime2025.org/proceedings/183.html" target="_blank" rel="noopener noreferrer">
-          • 2025 International Conference on New Interfaces for Musical Expression (NIME)
-        </a>
-      </div>
+      This work was performed at the 2025 International Conference on New Interfaces for Musical Expression (NIME)
     </SectionColumn>
   </SplitSection>
 </Section>
-<br/>
+
+<br/><br/><br/><br/>
+
+https://nime2025.org/proceedings/183.html
+https://nime2025.org/assets/preprints/nime2025_music_preprint_183.pdf
+
+
 <Section className="mt-20 w-full md:w-[85%] lg:w-[70%] ml-0 md:ml-15 lg:ml-45 text-sm">
   <Section className="w-full flex justify-end text-xs font-medium font-roboto-mono">
     Graphics projection | 2024
@@ -192,7 +191,62 @@ link: "https://youtu.be/WGYg-UNLEUU"
   </SplitSection>
 </Section>
 
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Becoming
 
+    <div className="text-lg">
+      An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
+    </div>
+
+    <br/><br/><br/>
+
+    #### Overview
+    Becoming is a custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. This project explores the relationship between human interaction, environmental data, and artistic expression.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Custom Hardware Interface**: Analog controls for direct manipulation
+    - **Environmental Sensing**: Real-time detection of surrounding stimuli
+    - **Audio-Visual Response**: Dynamic feedback based on interaction and environment
+    - **Interactive Art**: Blends technology with artistic expression
+
+    <br/><br/><br/>
+
+    #### Technical Implementation
+    The project combines Arduino for hardware control and Processing for audio-visual output, creating a seamless bridge between physical interaction and digital response.
+
+    <br/><br/><br/>
+
+    #### Impact
+    This project has been selected for presentation at The International Conference on New Interfaces for Musical Expression (NIME), highlighting its contribution to the field of interactive music and art.
+
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
+<ProjectInfo
+    items={[
+      { label: "Tags", values: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Role", values: ["Artist", "Developer"] },
+      { label: "Timeline", values: ["August 2024 - May 2025"] },
+      { label: "Team", values: ["Solo project"] },
+      { label: "Type", values: ["Audiovisual Installation"] },
+    ]}
+  />
 
 <Section className="mt-20 w-full md:w-[85%] lg:w-[90%] ml-0 md:ml-15 lg:ml-0 text-sm">
   <SplitSection className="my-2 mb-8 gap-2">
@@ -212,6 +266,31 @@ link: "https://youtu.be/WGYg-UNLEUU"
     </SectionColumn>
   </SplitSection>
 
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      **Becoming** 
+      
+      2025
+      
+      <Section className="w-4/5">
+        Accepted into the 2025 International Conference on New Interfaces for Musical Expression (NIME)
+      </Section>
+    </SectionColumn>
+    <SectionColumn size={6} className="h-[90vh] flex flex-col justify-between text-sm">
+      <ProjectInfoRow
+        items={[
+          { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+          { label: "Role", values: ["Artist", "Developer"] },
+          { label: "Timeline", values: ["6 months"] },
+          { label: "Team", values: ["Solo project"] },
+        ]}
+        labelClassName="font-normal text-muted-foreground uppercase text-xs"
+        valuesClassName="text-sm"
+      />
+
+      Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial.
+    </SectionColumn>
+  </SplitSection>
 
   <SplitSection className="text-xs font-mono">
     Concept → Context → Media
